[tool.poetry]
name = "pyds"
version = "0.0.0"
license = "GPL-3.0-only"
authors = ["netzego <no-reply@github.com>"]
description = "Common data structures in python"
readme = "README.md"
homepage = "https://github.com/netzego/pyds"
repository = "git@github.com:netzego/pyds.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
